--- a/2019/02/ARTS-2019-02-03.md
+++ b/2019/02/ARTS-2019-02-03.md
@@ -1,15 +1,46 @@
 
- [Algorithm](#algorithm)
+ [Algorithm Detect Capital](#algorithm)
 
  [Review](#review)
 
  [Technique](#technique)
 
- [Share](#share)
+ [Share ](#share)
 
 
 # Algorithm
 
+```java
+    public static boolean detectCapitalUse(String word) {
+
+        int  upperCount=0;
+        int  lowwerCount=0;
+        char letters[]=word.toCharArray();
+        char firstLetter=letters[0];
+
+        for (int i = 0; i < letters.length ; i++) {
+            char c=letters[i];
+            if(c>=65 && c<=90){
+                upperCount++;
+            }else{
+                lowwerCount++;
+            }
+        }
+
+        if(upperCount==letters.length||lowwerCount==letters.length){
+            return true;
+        }
+
+
+
+        if( upperCount==1 && (firstLetter>=65 && firstLetter<=90 )){
+            return true;
+        }
+
+        return false;
+    }
+
+```
 
 # Review
 
@@ -18,6 +49,12 @@
 
 
 # Share
+
+
+
+
+
+
 
 
 
