--- a/2019/01/ARTS-2019-01-27.md
+++ b/2019/01/ARTS-2019-01-27.md
@@ -3,7 +3,7 @@
 
  [Review](#review)
 
- [Technique](#technique)
+ [Technique opencv灰度的另一种方式](#technique)
 
  [Share python重试组件tenacity介绍](#share)
 
@@ -59,6 +59,24 @@
 
 
 # Technique
+
+```python
+standard_size = (1458, 2268)
+t1 = cv.imread('G:/exam_dir/007e/18.jpg') # 读取彩色图片
+t1 = cv.resize(t1, standard_size) # 重置大小
+t2 = cv.cvtColor(t1, cv.COLOR_BGR2GRAY) # 进行灰度化
+t3 = 255 - t2  # 对原图片数组的进行灰度值取反
+# 这一步可以打印一下
+cv.imshow("t3", t3)
+# 接着对某个阈值左右的点，进行预处理
+limit = 100
+t3[t3 < limit] = 0
+t3[t3 >= limit] = 255
+# 比如上面是小于limit值的归一为0
+# 比如上面是大于limit值的归一为255
+# 最后保存一下
+cv.imwrite("G:/exam_dir/007e/binary.jpg",t3)
+```
 
 
 # Share
