--- a/2019/01/ARTS-2019-01-27.md
+++ b/2019/01/ARTS-2019-01-27.md
@@ -1,7 +1,7 @@
 
  [Algorithm Rotated Digits](#algorithm)
 
- [Review](#review)
+ [Review get+过去分词的被动语法](#review)
 
  [Technique opencv灰度的另一种方式](#technique)
 
@@ -56,6 +56,32 @@
 
 
 # Review
+
+我们都知道，英语中表示被动的方法是"be+过去动词"，但是其实还有第二种方法，那就是"get+过去分词"，这两者的意思基本上是类似的。但是，后者用得比较少，尤其少用于正式的书面文体。 看下面三句话：
+
+```java
+a) The bus hit John.
+
+b) John was hit by the bus.
+
+c) John got hit by the bus.
+```
+get+过去分词 和 be+过去分词的主要区别：
+
+在"be+过去分词"的结构中，be是助动词（auxiliary），可以用来独立构成否定句和疑问句；get不是助动词，在否定句和疑问句，必须增加助动词。
+
+看下面的例句：
+
+```java
+* Was Kim attacked by a tiger?
+
+* Kim was not attacked by a tiger.
+
+* Did Kim get attacked by a tiger?
+
+* Kim did not get attacked by a tiger.
+```
+
 
 
 # Technique
