20190203增加share部分的命题

--- a/2019/02/ARTS-2019-02-03.md
+++ b/2019/02/ARTS-2019-02-03.md
@@ -50,7 +50,12 @@
 
 # Share
 
+春节前再给一个新的命题《线程安全》。
 
+提示：
+1）可以参看Wikipedia的词条：https://en.wikipedia.org/wiki/Thread_safety ，
+2）思考一下，线程安全的代码对性能的影响。然后了解无锁原理。
+3）最后至少阅读一下Java的 concurrent 包里的一个类，看看是怎么实现的。
 
 
 
