--- a/2019/02/ARTS-2019-02-03.md
+++ b/2019/02/ARTS-2019-02-03.md
@@ -3,7 +3,7 @@
 
  [Review](#review)
 
- [Technique](#technique)
+ [Technique 判断单向无环链表是否有交点 ](#technique)
 
  [Share 什么是线程安全 ](#share)
 
@@ -46,6 +46,94 @@
 
 
 # Technique
+
+
+/***
+ * 160. Intersection of Two Linked Lists
+ * https://leetcode.com/problems/intersection-of-two-linked-lists/
+ * intersection of two singly linklist
+ * 求两个单向链表的交点的位置
+ *
+ * 首先两个单向链表相交，一定不会是在头部，否则就成一个链表了，
+ * 那么必定是尾部是相等的.
+ *        1 -> 2 -> 21 -> 22 -> 23
+ * 11 -> 12 -> 13 -> 21 -> 22 -> 23
+ *
+ * 解决方法有两种：
+ *
+ * 第一种方法：统计两个链表的长度，长度大的链表先跳过去之前的间隔，然后后面的依次比较引用地址
+ *
+ * 第二种方法：直接对两个链表进行两两相比，如果next=null，那么则拼接另一个链表到此链表上，继续循环比较，直到两端都比较一遍
+ * 最终可得结果
+ *
+ */
+ 
+ 方法一：根据长度
+ 
+ ```java
+
+    public static ListNode getIntersectionNodeByLen(ListNode headA, ListNode headB) {
+
+        //boundary check
+        if(headA == null || headB == null) return null;
+
+        int lenA=size(headA);
+        int lenB=size(headB);
+
+        while (lenA>lenB){
+              headA=headA.next;
+              lenA--;
+        }
+
+        while (lenA<lenB){
+            headB=headB.next;
+            lenB--;
+        }
+
+        // find the intersection until end
+        while (headA != headB) {
+            headA = headA.next;
+            headB = headB.next;
+        }
+
+     return headA;
+    }
+    
+    
+     public static int size(ListNode head){
+            int count=0;
+            while(head!=null){
+                count++;
+                head=head.next;
+            }
+            return count;
+     }
+    
+```
+ 
+ 方法二：巧妙补位判断
+ 
+ 注意下面的方法不会发生死循环的原因是因为退出条件都为null
+ 
+ ```java
+    public static ListNode getIntersectionNode(ListNode headA, ListNode headB) {
+
+        //boundary check
+        if(headA == null || headB == null) return null;
+
+        ListNode a = headA;
+        ListNode b = headB;
+
+        while(a!=b){
+            a=a==null?headB:a.next;
+            b=b==null?headA:b.next;
+        }
+        return a;
+
+    }
+```
+ 
+
 
 
 # Share
