提交arts的review部分

--- a/2019/02/ARTS-2019-02-03.md
+++ b/2019/02/ARTS-2019-02-03.md
@@ -1,7 +1,7 @@
 
  [Algorithm Detect Capital](#algorithm)
 
- [Review](#review)
+ [Review 英语中to be的用法](#review)
 
  [Technique 判断单向无环链表是否有交点 ](#technique)
 
@@ -44,6 +44,13 @@
 
 # Review
 
+我们知道不定式to do在英语句子中，除了不能当谓语动词之外，其他的成分都可以充当，而to be 句型，则是不定式的一种变形
+
+比如我说，他假装很生气
+
+he pretended to be very angry。
+
+这里pretended 作为一个动词，后面必须跟宾语，而宾语必须是名词才可以，而angry是形容词所以不能直接使用，但是通过不定式，可以组成一个名词的宾语成分，这样就可以和pretend连用了
 
 # Technique
 
