提交arts的review的翻译

--- a/2019/02/ARTS-2019-02-10.md
+++ b/2019/02/ARTS-2019-02-10.md
@@ -1,7 +1,7 @@
 
  [Algorithm Count Binary Substring](#algorithm)
 
- [Review](#review)
+ [Review leetcode description tanslation](#review)
 
  [Technique](#technique)
 
@@ -44,6 +44,22 @@
 
 # Review
 
+ You are given a string representing an attendance record for a student. The record only contains the following three characters:
+ 
+ 给定一个代表学生的一条出勤记录的字符串，记录仅仅包含下面的三种形式：
+ 
+ 'A' : Absent.
+ A代表缺席
+ 'L' : Late.
+ L代表迟到
+ 'P' : Present.
+ P代表出勤
+ A student could be rewarded if his attendance record doesn't contain more than one 'A' (absent) or more than two continuous 'L' (late).
+ 
+如果一个学生的出勤记录不包含多余一个A或者多余两个以上的持续L的状态，那么他就可以获得奖励。
+ 
+ You need to return whether the student could be rewarded according to his attendance record.
+ 你需要根据一个学生的出勤记录来判断其是否可以被奖励。
 
 # Technique
 
