提交arts的technique部分

--- a/2019/02/ARTS-2019-02-10.md
+++ b/2019/02/ARTS-2019-02-10.md
@@ -3,7 +3,7 @@
 
  [Review leetcode description tanslation](#review)
 
- [Technique](#technique)
+ [Technique shell脚本打印一行数据添加换行](#technique)
 
  [Share First Unique Character in a String](#share)
 
@@ -63,6 +63,9 @@
 
 # Technique
 
+```bash
+ls  *.jar |  sed 's/ /\n/g'
+```
 
 # Share
 
