提交arts的相关部分

--- a/2019/02/ARTS-2019-02-17.md
+++ b/2019/02/ARTS-2019-02-17.md
@@ -3,9 +3,9 @@
 
  [Review](#review)
 
- [Technique](#technique)
+ [Technique Scala变长参数声明](#technique)
 
- [Share](#share)
+ [Share scala分组函数](#share)
 
 
 # Algorithm
@@ -41,7 +41,52 @@
 # Technique
 
 
+
+注意：变长字段必须放在参数列表的末尾
+
+
+```
+def printAll(strings: String*) {
+  strings.foreach(println)
+}
+```
+
+
+使用：
+
+```
+// these all work
+printAll()
+printAll("foo")
+printAll("foo", "bar")
+printAll("foo", "bar", "baz")
+```
+
+
+如果是集合类型的：
+Array, List, Seq, Vector, etc.
+
+需要使用_*通配符转化
+
+
+```
+// a sequence of strings
+val fruits = List("apple", "banana", "cherry")
+
+// pass the sequence to the varargs field
+printAll(fruits: _*)
+```
+
+
+
 # Share
+```scala
+//单个字段分组：
+records.groupBy(_.column1)
+//多个字段分组：
+records.groupBy(record => (record.column1, record.column2, record.column3))
+```
+
 
 
 
