--- a/2019/02/ARTS-2019-02-24.md
+++ b/2019/02/ARTS-2019-02-24.md
@@ -3,7 +3,7 @@
 
  [Review](#review)
 
- [Technique](#technique)
+ [Technique Spark读取ES RDD索引不存在报错解决](#technique)
 
  [Share](#share)
 
@@ -50,6 +50,18 @@ public class StudentAttendanceRecoder {
 
 
 # Technique
+
+spark读取ES RDD，如果索引不存在会抛出错误还是返回空的数据，这个可以设置某个参数来解决，如下：
+```scala
+    val spark = SparkSession
+      .builder().master("local[3]").appName("spark teach real time job")
+      .config("spark.serializer", "org.apache.spark.serializer.KryoSerializer")
+      .config("es.nodes",ConfigTools.cfg.getString("es.ips"))
+      .config("es.port",ConfigTools.cfg.getString("es.port"))
+      .config("es.index.read.missing.as.empty","true")//加上这行
+//      .enableHiveSupport()
+      .getOrCreate()
+```
 
 
 # Share
