--- a/2019/02/ARTS-2019-02-24.md
+++ b/2019/02/ARTS-2019-02-24.md
@@ -51,6 +51,9 @@ public class StudentAttendanceRecoder {
 
 # Technique
 
+ES的官网配置地址：
+https://www.elastic.co/guide/en/elasticsearch/hadoop/current/configuration.html
+
 spark读取ES RDD，如果索引不存在会抛出错误还是返回空的数据，这个可以设置某个参数来解决，如下：
 ```scala
     val spark = SparkSession
