--- a/2019/02/ARTS-2019-02-24.md
+++ b/2019/02/ARTS-2019-02-24.md
@@ -5,7 +5,7 @@
 
  [Technique Spark读取ES RDD索引不存在报错解决](#technique)
 
- [Share](#share)
+ [Share recoder of some elegant english sentence](#share)
 
 
 # Algorithm
@@ -68,6 +68,20 @@ spark读取ES RDD，如果索引不存在会抛出错误还是返回空的数据
 
 
 # Share
+
+###1
+
+it is start of something new.
+
+这是一个新的开始
+
+###2
+
+you don't need to be nervous.
+
+
+
+
 
 
 
