--- a/2019/02/ARTS-2019-02-24.md
+++ b/2019/02/ARTS-2019-02-24.md
@@ -79,6 +79,19 @@ it is start of something new.
 
 you don't need to be nervous.
 
+你不需要紧张
+
+###3 
+
+
+we are certain to be victorious
+
+we are must to be victorious
+
+we are could to be victorious
+
+我们确信会胜利
+
 
 
 
