20190303增加share部分分享

--- a/2019/03/ARTS-2019-03-03.md
+++ b/2019/03/ARTS-2019-03-03.md
@@ -5,7 +5,7 @@
 
  [Technique](#technique)
 
- [Share](#share)
+ [Share 关于英语里面副词修饰动名词 ](#share)
 
 
 # Algorithm
@@ -59,6 +59,20 @@ public class ReverseString2 {
 
 
 # Share
+
+前两天，在网上看到一篇英文文章，其中有一个句子如下：
+
+More broadly speaking。 中文意思为更加广泛的说。
+
+但这里面sparking是动名词，这里面注意more和broadly都是副词
+
+
+但如果sparking是名词的话，那么修饰语肯定是形容词才可以，那么为什么这里还可以是副词呢？
+
+经查询资料发现，动名词虽然有名词的性质，但其也还表达动词的含义，所以大部分时候都是用副词修饰，但一些用习惯的动名词，已经被当做名词对待了，此时用形容词修饰也是可以的 。
+比如：
+good writing
+beautiful painting
 
 
 
