--- a/2019/03/ARTS-2019-03-03.md
+++ b/2019/03/ARTS-2019-03-03.md
@@ -3,7 +3,7 @@
 
  [Review](#review)
 
- [Technique](#technique)
+ [Technique ES多个字段分组求和和排序](#technique)
 
  [Share 关于英语里面副词修饰动名词 ](#share)
 
@@ -56,6 +56,65 @@ public class ReverseString2 {
 
 
 # Technique
+
+```java
+    @Test
+    public  void testQueryAgg(){
+
+        long start=System.currentTimeMillis();
+        SearchRequestBuilder search=client.prepareSearch("rc_tpds_20190222").setTypes("rc_tpds");
+
+//        search.setQuery(QueryBuilders.queryStringQuery("city_id:3707"));
+        search.setQuery(QueryBuilders.constantScoreQuery(QueryBuilders.queryStringQuery("city_id:3707")));
+
+        TermsBuilder one = AggregationBuilders.terms("one").field("county_id");
+        TermsBuilder two = AggregationBuilders.terms("two").field("school_id");
+
+        TermsBuilder three = AggregationBuilders.terms("three").field("user_id").order(
+                Terms.Order.compound(Terms.Order.aggregation("sum_count",false))//先按count，降序排)
+        );
+
+
+        two.subAggregation(three);
+
+        one.subAggregation(two);
+
+        SumBuilder sb= AggregationBuilders.sum("sum_count").field("num");
+
+        three.subAggregation(sb);
+
+        search.addAggregation(one);
+
+
+        Terms tms=  search.get().getAggregations().get("one");
+
+        //遍历每一个分组的key
+        for(Terms.Bucket tbb:tms.getBuckets()){
+
+            Terms tw= tbb.getAggregations().get("two");
+
+            for(Terms.Bucket t2:tw.getBuckets()){
+                
+                Terms t3=t2.getAggregations().get("three");
+                
+                for(Terms.Bucket t4:t3.getBuckets()){
+                    
+                    Sum sum= t4.getAggregations().get("sum_count");
+                    System.out.println(tbb.getKeyAsString()+" "+t2.getKeyAsString()  +"  "+t4.getKeyAsString()+ " "+t4.getDocCount()+" "+sum.getValue());
+                    
+                }
+
+            }
+
+        }
+        long end=System.currentTimeMillis();
+
+        System.out.println(end-start);
+        client.close();
+
+    }
+```
+
 
 
 # Share
