提交arts的的review部分

--- a/2019/03/ARTS-2019-03-03.md
+++ b/2019/03/ARTS-2019-03-03.md
@@ -1,7 +1,7 @@
 
  [Algorithm Reverse String II](#algorithm)
 
- [Review](#review)
+ [Review Structured Streaming Introduce](#review)
 
  [Technique ES多个字段分组求和和排序](#technique)
 
@@ -53,6 +53,17 @@ public class ReverseString2 {
 
 
 # Review
+
+Structured Streaming is a scalable and fault-tolerant stream processing engine built on the Spark SQL engine. You can express your streaming computation the same way you would express a batch computation on static data. The Spark SQL engine will take care of running it incrementally and continuously and updating the final result as streaming data continues to arrive. You can use the Dataset/DataFrame API in Scala, Java, Python or R to express streaming aggregations, event-time windows, stream-to-batch joins, etc. The computation is executed on the same optimized Spark SQL engine. Finally, the system ensures end-to-end exactly-once fault-tolerance guarantees through checkpointing and Write-Ahead Logs. In short, Structured Streaming provides fast, scalable, fault-tolerant, end-to-end exactly-once stream processing without the user having to reason about streaming.
+
+Structed Streaming是一个构建在Spark SQL之上的具有可扩展，可容错的流处理引擎。它可以让使用流计算像
+批处理操作静态表数据一样。Spark SQL可以以增量的方式性，不间断的从到来的流数据里面计算结果并更新最终数据。
+你可以使用Java，Scala，Python，R语言来操作DataFrame/DataSet来处理流聚合，事件时间，流join等算子。
+计算一样会享受spark SQL层面的优化。最终通过checkpoint和预写log能够保证数据处理的准确一次的语义。
+简单的说，Structed Streaming提供了一个快的，可扩展，可容错，端到端的准确一次的流处理框架而不需要使用者
+了解太多框架的细节。
+
+
 
 
 # Technique
