--- a/2019/03/ARTS-2019-03-10.md
+++ b/2019/03/ARTS-2019-03-10.md
@@ -3,7 +3,7 @@
 
  [Review](#review)
 
- [Technique](#technique)
+ [Technique 字符串压缩的一个简单算法](#technique)
 
  [Share 深入理解计算机系统的中文电子书](#share)
 
@@ -61,6 +61,50 @@ public class LongPressedName {
 
 
 # Technique
+
+````java
+/***
+ * 字符串压缩
+ */
+public class StringCompression {
+
+    public static int compress(char[] chars) {
+        //定义两个偏移量
+        int indexAns=0, index=0;
+        while (index<chars.length){
+            char currentChar=chars[index];
+            int count=0;
+            //如果有重复的就会一直统计count
+            while (index<chars.length&&chars[index]==currentChar){
+                index++;
+                count++;
+            }
+            //最后在切换重置新的字符
+            chars[indexAns++]=currentChar;
+            //判断count的值，转成字符串，放入数组里面
+            if(count!=1){
+                for (char c:Integer.toString(count).toCharArray()) {
+                    chars[indexAns++]=c;
+                }
+            }
+        }
+        //返回最终统计数量
+        return indexAns;
+    }
+
+
+    public static void main(String[] args) {
+
+
+        System.out.println(compress("aabbccc".toCharArray()));
+
+    }
+
+
+
+}
+````
+
 
 
 # Share
