--- a/2019/03/ARTS-2019-03-10.md
+++ b/2019/03/ARTS-2019-03-10.md
@@ -1,7 +1,7 @@
 
  [Algorithm Long Pressed Name](#algorithm)
 
- [Review](#review)
+ [Review  String indexOf vs lastIndexOf](#review)
 
  [Technique 字符串压缩的一个简单算法](#technique)
 
@@ -58,6 +58,13 @@ public class LongPressedName {
 
 
 # Review
+
+https://docs.oracle.com/javase/6/docs/api/java/lang/String.html#lastIndexOf%28int%29
+
+关于字符串的两个搜索方法indexOf 和 lastIndexOf，有什么区别？
+
+其实比较简单indexOf是用头开始向后搜索查找的，而lastIndexOf是从字符串的的末尾开始向前搜索的，如果已经明确
+这个查询字符串可能会出现待查找字符串的末尾，那么用lastIndexOf会明显提升性能，这一点需要注意。
 
 
 # Technique
