--- a/2019/03/ARTS-2019-03-17.md
+++ b/2019/03/ARTS-2019-03-17.md
@@ -181,7 +181,7 @@
 
 数据类型和数据结构之间的关系如下：
 
-
+![image](https://github.com/qindongliang/Java-Note/blob/master/src/main/resources/pic/数据类型.png)
 
 
 #### 总结
