--- a/2019/03/ARTS-2019-03-17.md
+++ b/2019/03/ARTS-2019-03-17.md
@@ -1,7 +1,7 @@
 
  [Algorithm Most Common Word](#algorithm)
 
- [Review](#review)
+ [Review AWS Lambda in Plain English ](#review)
 
  [Technique 数据结构与数据类型的区别，联系，本质？](#technique)
 
@@ -104,6 +104,13 @@
 
 
 # Review
+
+https://zeroequalsfalse.press/posts/what-is-lambda/
+
+本文主要介绍了亚马逊云服务提供的能够弹性调度的Lambda使用方式。
+大致意思：
+是我们可以把我们的应用程序，打包成一个zip压缩包，然后上传到亚马逊上，由亚马逊的云服务对外提供一个URL作为访问入口，使用者可以直接使用这个URL就行，屏蔽了底层的硬件系统的差异，并可以根据网络流量自动伸缩来节省资源。
+
 
 
 # Technique
