20190324增加review的内容

--- a/2019/03/ARTS-2019-03-24.md
+++ b/2019/03/ARTS-2019-03-24.md
@@ -1,7 +1,7 @@
 
  [Algorithm Reverse Vowels of a String](#algorithm)
 
- [Review](#review)
+ [Review 摘抄来自深入理解计算机系统的英语句子](#review)
 
  [Technique](#technique)
 
@@ -140,6 +140,11 @@ public class ReverseVowelsString {
 
 # Review
 
+“It reinforces the concept that the virtual memory space is just an array of bytes that the program can subdivide into different storage units”
+
+它强调了虚拟内存空间仅仅是一个字节数组的概念，程序可以将其细分为不同的存储单元。
+
+from 《Computer Systems  A Programmer's Perspective 3rd》 Book Overview Chapter 9
 
 # Technique
 
